--- a/azure-pipelines-ng8.yml
+++ b/azure-pipelines-ng8.yml
@@ -8,7 +8,7 @@ resources:
 - repo: self
 
 pool:
-  vmImage: 'Ubuntu 18.04'
+  vmImage: 'Ubuntu-latest'
 
 variables:
   buildConfiguration: 'Release'
